<resources>
    <string name="app_name">Android Project</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="project_title">My Project</string>
    <string name="titleimage">TitleImage</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="title_certification">Certification</string>
    <string name="title_favourites">Favourites</string>
    <string name="take_me_there">Take me there</string>
    <string name="modify">Modify</string>
    <string name="apply">Apply</string>
    <string name="change_image">Change image</string>
    <string name="make_favorite">Make favorite</string>
    <string name="toggle_favorite">Toggle favorite</string>
</resources>