<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    tools:context=".SplashScreenFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="150sp"
        android:rotationX="0"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/titleimage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:typeface="monospace" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/project_title"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        android:typeface="normal" />

</LinearLayout>